se hicieorn cambios de front

--- a/frontend/libroLista.html
+++ b/frontend/libroLista.html
@@ -23,10 +23,10 @@
     <body onload="listarLibros();">
     
         <!-- Topbar Start(Inicio de la barra superior) -->
-        <div class="container-fluid text-white pt-4 pb-5 d-none d-lg-flex"  style="background-color: #9d7ed4;">
+        <div class="container-fluid text-white pt-4 pb-5 d-none d-lg-flex"  style="background-color: #e9da33;">
             <div class="container pb-2">
                 <div class="d-flex align-items-center justify-content-center">
-                    <a href="index.html" class="h1 text-white mb-0" style="font-size:  50px;  font-family: Roboto sans-serif ; text-decoration: none">SHOES <span class="text-dark"> STORE</span></a>
+                    <a href="index.html" class="h1 text-white mb-0" style="font-size:  50px;  font-family: Roboto sans-serif ; text-decoration: none">Libreria <span class="text-dark"> Yellow</span></a>
                 </div>
             </div>
         </div>
@@ -48,8 +48,8 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Libros</a>
                                 <div class="dropdown-menu bg-light m-0">                                
-                                    <a href="LibrosRegistro.html" class="dropdown-item">Registro de Libros</a>
-                                    <a href="LibrosLista.html" class="dropdown-item">Lista de Libross</a>
+                                    <a href="./libroRegistro.html" class="dropdown-item">Registro de libros</a>
+                                    <a href="./libroLista.html" class="dropdown-item">Lista de libros</a>
                                 </div>
                             </div>
                             <div class="nav-item dropdown">
