--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,8 +54,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Libros</a>
                             <div class="dropdown-menu bg-light m-0">                                
-                                <a href="./libroRegistro.html" class="dropdown-item">Regis0tro de Libros</a>
-                                <a href="./libroLista.html" class="dropdown-item">llLista de Libros</a>
+                                <a href="./libroRegistro.html" class="dropdown-item">Registro de libros</a>
+                                <a href="./libroLista.html" class="dropdown-item">Lista de libros</a>
                             </div>
                         </div>
 
