--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,13 +50,13 @@
                     <div class="navbar-nav" style="margin-left: 2%;">
 
                         <!-- Home -->
-                        <a href="index.html" class="nav-item nav-link active" style="color: #e9da33;">Home</a>
+                        <a href="index.html" class="nav-item nav-link active text-warning">Home</a>
 
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Libros</a>
                             <div class="dropdown-menu bg-light m-0">                                
-                                <a href="./libroRegistro.html" class="dropdown-item">Regis0tro de Libros</a>
-                                <a href="./libroLista.html" class="dropdown-item">llLista de Libros</a>
+                                <a href="./libroRegistro.html" class="dropdown-item">Registro de Libros</a>
+                                <a href="./libroLista.html" class="dropdown-item">Lista de Libros</a>
                             </div>
                         </div>
 
@@ -103,9 +103,9 @@
         </div>
     </div>
     <!-- Navbar End -->
-    <div class="container">
+    <!-- <div class="container">
         <img src="./img/imagen-archivo-libros_69.jpg" alt="" srcset="">
-    </div>
+    </div> -->
     <!-- Message error -->
     
     <!-- Message error -->
