Modificacion en titulo y navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Libreria Yellow</title>
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
     <!-- Prueba de iconos por link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -22,10 +27,11 @@
 </head>
 <body>
    <!-- Brand Start (Inicio de marca) -->
-    <div class="container-fluid text-white pt-4 pb-5 d-none d-lg-flex"  style="background-color: #e9da3358;">
-        <div class="container pb-2">
+    <div class="container-fluid text-white pt-4 pb-5 d-none d-lg-flex"  style="background: linear-gradient(to top, rgba(255,0,0,0), #ffc107);">
+        <div class="container p-4">
             <div class="d-flex align-items-center justify-content-center">
-                <a href="index.html" class="h1 text-white mb-0" style="font-size:  50px;  font-family: Roboto sans-serif ; text-decoration: none">Libreria <span class="text-dark"> Yellow</span></a>
+                <a href="index.html" class="h1 text-white mb-0" style="font-size: 50px; font-family: Arial, sans-serif; text-decoration: none; text-shadow: 1px 1px 2px rgb(81, 81, 81);">Libreria <span style=" font-weight: bold; 
+                -webkit-text-stroke-width: 2px; -webkit-text-stroke-color: #ff9a3c44; color: #f8da5b; text-shadow: 1px 1px 2px rgb(81, 81, 81); font-family: Pacifico, sans-serif;"> Yellow</span></a>
             </div>
         </div>
     </div>
@@ -37,7 +43,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-lg-0 px-lg-3" style="border-radius: 70px;">
                 <a href="index.html" class="navbar-brand d-lg-none">
-                    <h1 class="text-white m-0">Libreria<span class="text-warning">Yellow</span></h1>
+                    <!-- <h1 class="text-white m-0">Libreria<span class="text-warning">Yellow</span></h1> -->
                 </a>
 
 <!--                 
@@ -46,7 +52,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button> -->
 
-                <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="collapse navbar-collapse d-flex flex-row justify-content-center" id="navbarCollapse">
                     <div class="navbar-nav" style="margin-left: 2%;">
 
                         <!-- Home -->
@@ -55,13 +61,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Libros</a>
                             <div class="dropdown-menu bg-light m-0">                                
-<<<<<<< HEAD
-                                <a href="./libroRegistro.html" class="dropdown-item">Registro de Libros</a>
-                                <a href="./libroLista.html" class="dropdown-item">Lista de Libros</a>
-=======
                                 <a href="./libroRegistro.html" class="dropdown-item">Registro de libros</a>
                                 <a href="./libroLista.html" class="dropdown-item">Lista de libros</a>
->>>>>>> e444b2c5f3dca5ebdf92368459d531a0646d3904
                             </div>
                         </div>
 
