Modificacion general registro de libros

--- a/frontend/compraLista.html
+++ b/frontend/compraLista.html
@@ -57,8 +57,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Libros</a>
                             <div class="dropdown-menu bg-light m-0">                                
-                                <a href="LibrosRegistro.html" class="dropdown-item">Registro de Libros</a>
-                                <a href="./LibrosLista.html" class="dropdown-item">Lista de Libross</a>
+                                <a href="./libroRegistro.html" class="dropdown-item">Registro de libros</a>
+                                <a href="./libroLista.html" class="dropdown-item">Lista de libros</a>
                             </div>
                         </div>
 
