--- a/frontend/compraRegistro.html
+++ b/frontend/compraRegistro.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -57,8 +57,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Libros</a>
                             <div class="dropdown-menu bg-light m-0">                                
-                                <a href="LibrosRegistro.html" class="dropdown-item">Registro de Libros</a>
-                                <a href="./LibrosLista.html" class="dropdown-item">Lista de Libross</a>
+                                <a href="./libroRegistro.html" class="dropdown-item">Registro de libros</a>
+                                <a href="./libroLista.html" class="dropdown-item">Lista de libros</a>
                             </div>
                         </div>
 
