--- a/frontend/libroRegistro.html
+++ b/frontend/libroRegistro.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -104,11 +104,11 @@
         </div>
     </div>
     <!-- Navbar End -->
-    <h1 class="registrarMedicosT">Registrar Libross</h1>
-    <div class="" style="padding-left: 21rem;">
+    <h1 class="registrarMedicosT">Registrar Libros</h1>
+    <div class="d-flex justify-content-center">
         <p><strong>Todos los campos que contengan (*) son obligatorios</strong> </p>
     </div>
-   <div class="row" style="margin-right: 0px;">
+   <div class="row" style="place-content: center;">
 
    <!-- <form class="row g-3 needs-validation" novalidate> -->
         <!-- <div class="col-md-4">
