--- a/frontend/ventasRegistro.html
+++ b/frontend/ventasRegistro.html
@@ -66,11 +66,11 @@
                     <div class="navbar-nav" style="margin-left: 2%;">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Cliente</a>
-                        <div class="dropdown-menu bg-light m-0">                                
-                            <a href="clienteRegistro.html" class="dropdown-item">Registro de Cliente</a>
-                            <a href="clienteLista.html" class="dropdown-item">Lista de clientes</a>
-                        </div>
+                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Libros</a>
+                      <div class="dropdown-menu bg-light m-0">                                
+                          <a href="./libroRegistro.html" class="dropdown-item">Registro de libros</a>
+                          <a href="./libroLista.html" class="dropdown-item">Lista de libros</a>
+                      </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Productos</a>
