--- a/frontend/libroRegistro.html
+++ b/frontend/libroRegistro.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/Libros.js"></script>
+    <script src="js/libro.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/estilos.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -106,31 +106,31 @@
 
          <div class="col-md-4">
             <label for="titulo" class="form-label">Título*</label>
-            <input type="number" class="form-control" name="titulo" id="titulo" onfocusout="validarNumeroDocumento(this);">
+            <input type="text" class="form-control" name="titulo" id="titulo" onfocusout="validarNombreApellido(this);">
           </div>
 
           <div class="col-md-4">
             <label for="autor" class="form-label">Autor*</label>
-            <input type="text" class="form-control"  name="autor" id="autor" onfocusout="validarNombreApellido(this);">
+            <input type="text" class="form-control"  name="autor" id="autor" >
           </div>
 
           <div class="col-md-4">
             <label for="isbn" class="form-label">ISBN*</label>
-            <input type="text" class="form-control" name="isbn" id="isbn"   onfocusout="validarNombreApellido(this);">
+            <input type="number" class="form-control" name="isbn" id="isbn"   onfocusout="validarNombreApellido(this);">
           </div>
 
           <div class="col-md-4">
             <label for="genero" class="form-label">Género*</label>
-            <input type="number" class="form-control" name="genero" id="genero"   onfocusout="validargenero(this);">
+            <input type="text" class="form-control" name="genero" id="genero"   onfocusout="validarNombreApellido(this);">
           </div>
 
           <div class="col-md-4">
             <label for="numero_disponible" class="form-label">Número de ejemplares disponibles*</label>
-            <input type="text" class="form-control" name="numero_disponible" id="numero_disponible" >
+            <input type="number" class="form-control" name="numero_disponible" id="numero_disponible" >
           </div>
           <div class="col-md-4">
             <label for="numero_ocupado" class="form-label">Número de ejmplares ocupados*</label>
-            <input type="text" class="form-control" name="numero_ocupado" id="numero_ocupado" onfocusout="validarDireccionCiudad(this);" >
+            <input type="number" class="form-control" name="numero_ocupado" id="numero_ocupado" >
           </div>
       <div class="col-12" style=" display: flex;justify-content: center;padding-bottom: 3% ">
           <button class="btn btn-success" type="button" onclick="RegistrarLibros();" style="width: 200px;">Registrar</button>
