--- a/frontend/libroRegistro.html
+++ b/frontend/libroRegistro.html
@@ -105,7 +105,7 @@
     </div>
     <!-- Navbar End -->
     <div class="container" style="background-color: rgba(255, 255, 255, 0.5); border-radius: 10px; ">
-        <h1 class="registrarMedicosT">Registrar Libros</h1>
+        <h1 class="registrarMedicosT pt-4">Registrar Libros</h1>
         <div class="d-flex justify-content-center">
             <p><strong>Todos los campos que contengan (*) son obligatorios</strong> </p>
         </div>
@@ -118,36 +118,36 @@
                 </div> -->
             
 
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-left: 30px;">
                     <label for="titulo" class="form-label">Título*</label>
                     <input type="text" class="form-control" name="titulo" id="titulo" onfocusout="validarNombreApellido(this);">
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-left: 30px;">
                     <label for="autor" class="form-label">Autor*</label>
                     <input type="text" class="form-control"  name="autor" id="autor" >
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-left: 30px;">
                     <label for="isbn" class="form-label">ISBN*</label>
                     <input type="number" class="form-control" name="isbn" id="isbn"   onfocusout="validarNombreApellido(this);">
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-left: 30px;">
                     <label for="genero" class="form-label">Género*</label>
                     <input type="text" class="form-control" name="genero" id="genero"   onfocusout="validarNombreApellido(this);">
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-left: 30px;">
                     <label for="numero_disponible" class="form-label">Número de ejemplares disponibles*</label>
                     <input type="number" class="form-control" name="numero_disponible" id="numero_disponible" >
                 </div>
-                <div class="col-md-4">
-                    <label for="numero_ocupado" class="form-label">Número de ejmplares ocupados*</label>
+                <div class="col-md-4" style="margin-left: 30px;">
+                    <label for="numero_ocupado" class="form-label">Número de ejemplares ocupados*</label>
                     <input type="number" class="form-control" name="numero_ocupado" id="numero_ocupado" >
                 </div>
-            <div class="col-12" style=" display: flex;justify-content: center;padding-bottom: 3% ">
-                <button class="btn btn-success" type="button" onclick="RegistrarLibros();" style="width: 200px;">Registrar</button>
+            <div class="col-12" style=" display: flex;justify-content: center;padding-bottom: 3%; gap: 20px;">
+                <button class="btn btn-warning" type="button" onclick="RegistrarLibros();" style="width: 200px;">Registrar</button>
                 <button class="btn btn-dark" type="button" onclick="limpiar();" style="width: 200px;">Limpiar</button>
             </div>
         </div> 
