Rediseño espaciado entre inputs

--- a/frontend/libroLista.html
+++ b/frontend/libroLista.html
@@ -101,7 +101,7 @@
             <div class="col-4">
                 <div class="input-group mb-3 ">
                     <!-- Input Search -->
-                    <input class="form-control me-2" type="search" placeholder="Buscar libro" aria-label="Search" id="buscar">
+                    <input class="form-control me-2 rounded-start-3" type="search" placeholder="Buscar libro" aria-label="Search" id="buscar">
                     <!-- Button Search -->
                     <button class="btn btn-outline-success" type="button" id="btn-search" onclick="listarLibros();">Buscar</button>
                 </div>
