--- a/frontend/libroRegistro.html
+++ b/frontend/libroRegistro.html
@@ -93,7 +93,7 @@
         <div class="d-flex justify-content-center">
             <p><strong>Todos los campos que contengan (*) son obligatorios</strong> </p>
         </div>
-        <div class="row" style="place-content: center; ">
+        <div class="row" style="place-content: center; gap: 20px;">
 
             <!-- <form class="row g-3 needs-validation" novalidate> -->
                 <!-- <div class="col-md-4">
@@ -102,31 +102,31 @@
                 </div> -->
             
 
-                <div class="col-md-4" style="margin-left: 30px;">
+                <div class="col-md-4" style="margin-left: 0;">
                     <label for="titulo" class="form-label">Título*</label>
                     <input type="text" class="form-control" name="titulo" id="titulo" onfocusout="validarNombreApellido(this);">
                 </div>
 
-                <div class="col-md-4" style="margin-left: 30px;">
+                <div class="col-md-4" style="margin-left: 0;">
                     <label for="autor" class="form-label">Autor*</label>
                     <input type="text" class="form-control"  name="autor" id="autor" >
                 </div>
 
-                <div class="col-md-4" style="margin-left: 30px;">
+                <div class="col-md-4" style="margin-left: 0;">
                     <label for="isbn" class="form-label">ISBN*</label>
                     <input type="number" class="form-control" name="isbn" id="isbn"   onfocusout="validarNombreApellido(this);">
                 </div>
 
-                <div class="col-md-4" style="margin-left: 30px;">
+                <div class="col-md-4" style="margin-left: 0;">
                     <label for="genero" class="form-label">Género*</label>
                     <input type="text" class="form-control" name="genero" id="genero"   onfocusout="validarNombreApellido(this);">
                 </div>
 
-                <div class="col-md-4" style="margin-left: 30px;">
+                <div class="col-md-4" style="margin-left: 0;">
                     <label for="numero_disponible" class="form-label">Número de ejemplares disponibles*</label>
                     <input type="number" class="form-control" name="numero_disponible" id="numero_disponible" >
                 </div>
-                <div class="col-md-4" style="margin-left: 30px;">
+                <div class="col-md-4" style="margin-left: 0;">
                     <label for="numero_ocupado" class="form-label">Número de ejemplares ocupados*</label>
                     <input type="number" class="form-control" name="numero_ocupado" id="numero_ocupado" >
                 </div>
