Correccion navbar de ventas

--- a/frontend/ventasLista.html
+++ b/frontend/ventasLista.html
@@ -63,10 +63,10 @@
                                 </div>
                             </div>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Productos</a>
+                                <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Usuario</a>
                                 <div class="dropdown-menu bg-light m-0">
-                                    <a href="./productoRegistro.html" class="dropdown-item">Registro de productos</a>
-                                    <a href="./productoLista.html" class="dropdown-item">Lista de productos</a>
+                                    <a href="./usuarioRegistro.html" class="dropdown-item">Registro de usuarios</a>
+                                    <a href="./usuarioLista.html" class="dropdown-item">Lista de usuarios</a>
                                 </div>
                             </div>
                             <div class="nav-item dropdown">
