--- a/frontend/ventasRegistro.html
+++ b/frontend/ventasRegistro.html
@@ -73,12 +73,12 @@
                       </div>
                     </div>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Productos</a>
-                        <div class="dropdown-menu bg-light m-0">
-                            <a href="./productoRegistro.html" class="dropdown-item">Registro de productos</a>
-                            <a href="./productoLista.html" class="dropdown-item">Lista de productos</a>
-                        </div>
-                    </div>
+                      <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Usuario</a>
+                      <div class="dropdown-menu bg-light m-0">
+                          <a href="./usuarioRegistro.html" class="dropdown-item">Registro de usuarios</a>
+                          <a href="./usuarioLista.html" class="dropdown-item">Lista de usuarios</a>
+                      </div>
+                  </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Venta</a>
                         <div class="dropdown-menu bg-light m-0">
