se hizo frontend de todo, toca revisar listas y registros

--- a/frontend/libroRegistro.html
+++ b/frontend/libroRegistro.html
@@ -71,13 +71,19 @@
                         </div>
 
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Venta</a>
+                            <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Prestamo</a>
                             <div class="dropdown-menu bg-light m-0">
-                                <a href="./ventasRegistro.html" class="dropdown-item">Registro de ventas</a>
-                                <a href="./ventasLista.html" class="dropdown-item">Lista de ventas</a>
+                                <a href="./prestamoRegistro.html" class="dropdown-item">Registro de prestamo</a>
+                                <a href="./prestamoLista.html" class="dropdown-item">Lista de prestamo</a>
                             </div>
                         </div>
-
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle"data-bs-toggle="dropdown">Multa</a>
+                            <div class="dropdown-menu bg-light m-0">
+                                <a href="./multaRegistro.html" class="dropdown-item">Registro de Multa</a>
+                                <a href="./multaLista.html" class="dropdown-item">Lista de Multa</a>
+                            </div>
+                        </div>
                             
                         <!-- Proveedores -->
                           
