--- a/frontend/multaRegistro.html
+++ b/frontend/multaRegistro.html
@@ -17,7 +17,7 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
         <link rel="stylesheet" href="css/estilos.css">
-        <script src="./js/usuario.js"></script>
+        <script src="./js/multa.js"></script>
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="./img/world-book-day.png" type="image/x-icon">
@@ -89,7 +89,7 @@
         </div>
         <!-- Navbar End -->
         <div class="container" style="background-color: rgba(255, 255, 255, 0.5); border-radius: 10px; height: 60vh;">
-            <h1 class="registrarPacienteT pt-3">Registrar usuarios</h1>
+            <h1 class="registrarPacienteT pt-3">Registrar multa</h1>
             <!-- from Star(fromulario inicio) -->
                 <div class="d-flex justify-content-center">
                     <p><strong>Todos los campos que contengan (*) son obligatorios</strong> </p>
