--- a/frontend/prestamoRegistro.html
+++ b/frontend/prestamoRegistro.html
@@ -113,7 +113,7 @@
       <div class="col-md-4">
         <label for="fecha_devolucion" class="form-label">Fecha de la devolución</label>
         <input
-          type="datetime-local"
+          type="date"
           class="form-control"
           name="fecha_devolucion"
           id="fecha_devolucion"
@@ -122,8 +122,8 @@
           <!-- onfocusout="validarNumeroIdentificacion(this);"  -->
       </div>
       <div class="col-md-4">
-        <label for="usuario" class="form-label">Usuario</label>
-        <select name="usuario" id="usuario" class="form-select">
+        <label for="usuario_prestamo" class="form-label">Usuario</label>
+        <select name="usuario_prestamo" id="usuario_prestamo" class="form-select">
           <option selected disabled value="">
             Seleccione el usuario
           </option>
@@ -133,7 +133,7 @@
       </div>
       <div class="col-md-4">
         <label for="libro" class="form-label">Libro</label>
-        <select name="libro" id="libro" class="form-select">
+        <select name="libro" id="libro_prestamo" class="form-select">
           <option selected disabled value="">
             Seleccione el libro
           </option>
