--- a/frontend/usuarioLista.html
+++ b/frontend/usuarioLista.html
@@ -107,7 +107,7 @@
             
 
             <table class="table table-hover">
-                <thead class="table-light d-flex justify-content-center">
+                <thead class="table-light justify-content-center">
                     <tr>
                         <th scope="col" class="px-5">Código usuario</th>
                         <th scope="col" class="px-5">Nombres completos</th>
