--- a/frontend/libroLista.html
+++ b/frontend/libroLista.html
@@ -117,7 +117,7 @@
         <table class="table table-hover">
         </div>
       
-            <thead class="table-light d-flex justify-content-center">
+            <thead class="table-light justify-content-center">
                 <tr>
 
                     <th scope="col" class="px-3">Código del libro</th>
