--- a/frontend/multaLista.html
+++ b/frontend/multaLista.html
@@ -107,7 +107,7 @@
             
 
             <table class="table table-hover">
-                <thead class="table-light d-flex justify-content-center">
+                <thead class="table-light justify-content-center">
                     <tr>
                         <th scope="col" class="px-5">Código multa</th>
                         <th scope="col" class="px-5">Usuario multado</th>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-6">
                     <label for="usuario_multado" class="form-label">Usuario multado*</label>
-                    <input type="text" class="form-control" name="usuario_multado" id="direccion" >
+                    <input type="text" class="form-control" name="usuario_multado" id="usuario_multado" >
                 </div>
                 <div class="col-6">
                     <label for="prestamo" class="form-label">Prestamo*</label>
